--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
             <div id="definition-display" class="definition-popup">
             Klicke oder fahre mit der Maus über ein **fett gedrucktes** Wort, um die Definition hier zu sehen.
             </div>
+            <h2 style="margin-top: 30px;">Definition beitragen</h2>
+            <form id="submission-form">
+                <label for="submit-word">Wort:</label>
+                <input type="text" id="submit-word" name="word" readonly required>
             
+                <label for="submit-definition">Definition (DE):</label>
+                <textarea id="submit-definition" name="definition" required></textarea>
+            
+                <button type="submit" id="submit-button">Definition senden</button>
+                <p id="submission-message" style="margin-top: 10px;"></p>
+            </form>
             <h2>Mein Vokabel-Set (<span id="vocab-count">0</span>)</h2>
             <button id="clear-vocab-button">Set leeren (Clear Set)</button>
             <ul id="selected-vocab-list">
