--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         </div>
     </div>
 
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+    <script src="script.js"></script>
+    
     <script src="script.js"></script>
 </body>
 </html>
