--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <div id="definition-display" class="definition-popup">
             Klicke oder fahre mit der Maus über ein **fett gedrucktes** Wort, um die Definition hier zu sehen.
             </div>
-            <h2 style="margin-top: 30px;">Definition beitragen</h2>
+            <h2 style="margin-top: 30px;">Neues Wort beitragen</h2>
             <form id="submission-form">
-                <label for="submit-word">Wort:</label>
-                <input type="text" id="submit-word" name="word" readonly required>
+                <label for="submit-word">Wort (DE):</label>
+                <input type="text" id="submit-word" name="word" placeholder="z.B. Gemütlichkeit" required> 
             
                 <label for="submit-definition">Definition (DE):</label>
                 <textarea id="submit-definition" name="definition" required></textarea>
