--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <label for="submit-definition">Definition (DE):</label>
                 <textarea id="submit-definition" name="definition" required></textarea>
             
+                <label for="submit-definition-en">Definition (EN):</label>
+                <textarea id="submit-definition-en" name="definition-en" required></textarea>
+            
                 <button type="submit" id="submit-button">Definition senden</button>
                 <p id="submission-message" style="margin-top: 10px;"></p>
             </form>
