--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </div>
             
             <h2>Mein Vokabel-Set (<span id="vocab-count">0</span>)</h2>
+            <button id="download-vocab-button">Download CSV</button>
             <button id="clear-vocab-button">Set leeren (Clear Set)</button>
             <ul id="selected-vocab-list">
                 </ul>
