--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="sidebar-column">
             
             <div id="definition-display" class="definition-popup">
-            Klicke oder fahre mit der Maus über ein **fett gedrucktes** Wort, um die Definition hier zu sehen.
+            Klicke oder fahre mit der Maus über ein <span style="font-weight: bold;">fett gedrucktes</span> Wort, um die Definition hier zu sehen.
             </div>
             
             <h2>Mein Vokabel-Set (<span id="vocab-count">0</span>)</h2>
