--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <header>
         <h1>Buddenbrooks: Kapitel 1</h1>
+        <div class="chapter-selector-container">
+        <label for="chapter-select">Wähle ein Kapitel (Select a Chapter):</label>
+        <select id="chapter-select"></select>
+            </div>
     </header>
 
     <div class="container">
