--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Buddenbrooks: Kapitel 1</h1>
+        <h1>Buddenbrooks Reader</h1>
         <div class="chapter-selector-container">
         <label for="chapter-select">Wähle ein Kapitel (Select a Chapter):</label>
         <select id="chapter-select"></select>
