--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
         <label for="chapter-select">Wähle ein Kapitel (Select a Chapter):</label>
         <select id="chapter-select"></select>
             </div>
+        <div id="instructions-panel" style="display: none;">
+    <div class="instructions-content">
+        <h4>Willkommen! So funktioniert's:</h4>
+        <ul>
+            <li>**Mauszeiger:** Über ein Wort **fahren** um die Definition zu sehen (DE/EN).</li>
+            <li>**Klicken:** Ein Wort **anklicken** um es zu deinem Vokabel-Set hinzuzufügen/zu entfernen.</li>
+        </ul>
+        <button id="dismiss-instructions">OK, verstanden! (Got it!)</button>
+    </div>
+</div>
     </header>
 
     <div class="container">
