--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="instructions-content">
         <h4>Willkommen! So funktioniert's:</h4>
         <ul>
-            <li>**Mauszeiger:** Über ein Wort **fahren** um die Definition zu sehen (DE/EN).</li>
-            <li>**Klicken:** Ein Wort **anklicken** um es zu deinem Vokabel-Set hinzuzufügen/zu entfernen.</li>
+            <li>Mauszeiger: Über ein Wort fahren um die Definition zu sehen (DE/EN).</li>
+            <li>Klicken: Ein Wort anklicken um es zu deinem Vokabel-Set hinzuzufügen/zu entfernen.</li>
         </ul>
         <button id="dismiss-instructions">OK, verstanden! (Got it!)</button>
     </div>
