--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2 style="margin-top: 30px;">Neues Wort beitragen</h2>
             <form id="submission-form">
                 <label for="submit-word">Wort (DE):</label>
-                <input type="text" id="submit-word" name="word" placeholder="z.B. Gemütlichkeit" required> 
+                <input type="text" id="submit-word" name="word" placeholder="Enter word as appears in text, e.g. kleinen or kleine for klein." required> 
                 
                 <label for="submit-definition">Definition (DE):</label>
                 <textarea id="submit-definition" name="definition" required></textarea>
